medp285/finalproject/maze.css
#playerList {
    border: 2px solid #000;
    margin: 1em;
}

#chatLogContainer{
    position: relative;
    border: 2px solid #000;
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 1em;
    height: 200px;
}

#chatLogTitle {
    position: relative;
    margin: 0;
    height:; 10%;
}

#chatLog {
    position: relative;
    /* border: 2px solid #000; */
    margin: 0;
    overflow-y: scroll;
    height: 80%;
}

#chatInputBox {
    position: relative;
    border: 2px solid #000;
    margin: 1em;
    height: 10%;
    /*top: 0px;*/

}

#chatHistryContainer {
    position: relative;
    border: 2px solid #000;
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 1em;
    height: 200px;
}

#chatHistory {
    position: relative;
    border-top: 2px solid #000;
    margin: 0;
    overflow-y: scroll;
    height: 80%;
}

#chatHistoryButton {
    position: relative;
    margin: 0;
    height: 20%;
}

#gameViewPort {
    
}

#map {
    position : absolute;
}

#mapObjects {
    position : absolute;
}

